Added charts, refactored single Dockerfile and skaffold config